--- a/assets/src/css/style.scss
+++ b/assets/src/css/style.scss
@@ -1,3 +1,5 @@
+@use 'toggle';
+
 .edd-sdk__notice__overlay {
 	position: fixed;
 	top: 0;
@@ -31,6 +33,9 @@
 	border-radius: 4px;
 	border: 1px solid #ddd;
 	position: relative;
+	display: flex;
+	flex-direction: column;
+	gap: 1.5em;
 
 	button.edd-sdk__notice--dismiss {
 		position: absolute;
@@ -49,6 +54,7 @@
 .edd-sl-sdk__license-control {
 	display: flex;
 	gap: 4px;
+	margin-top: 1em;
 
 	button {
 		margin: 0 !important;
